# Telephone-Remote-Control

./: .gitignore  README.md
firmware/: CMakeLists.txt  LICENCE  README.md  config.h  iap.c  iap.h  isr.c  isr.h  main.c  phone.c  phone.h  storage.c  storage.h  time.c  time.h  util.c  util.h
schematic/: Interface_Telecom.dcm  Interface_Telecom.lib  phone_control-cache.lib  phone_control.pro  phone_control.sch  sym-lib-table
